--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   get: ^4.6.5
   appbar_animated: ^0.0.3
   carousel_slider: ^4.2.1
+  fluttertoast: ^8.2.2
+  provider: ^6.0.5
   cached_network_image: ^3.2.3
   intl: ^0.18.1
   http: ^0.13.5
