--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   fluttertoast: ^8.2.2
   provider: ^6.0.5
   cached_network_image: ^3.2.3
+  sqflite: ^2.2.8+4
+  flutter_slidable: ^3.0.0
   intl: ^0.18.1
   http: ^0.13.5
   shared_preferences: ^2.1.2
